--- a/css/3-modules.css
+++ b/css/3-modules.css
@@ -1,6 +1,6 @@
 h2 {
   font-family: 'Indie Flower', cursive;
-  font-size: 4em;
+  font-size: 3.5em;
 }
 
 h1 {
@@ -8,3 +8,7 @@ h1 {
   font-size: 5em;
 }
 
+a {
+  border: 1px black solid;
+  padding: 5px;
+}
